优化各个页面的功能

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -9,10 +9,19 @@ body {
 html, body, #app {
   height: 100%;
 }
+
+
 a {
   text-decoration: none;
-  color: #fff;
+  color: #333;
 }
+
+.pagination {
+  display: grid;
+  justify-items: center;
+  margin-bottom: 30px;
+}
+
 
 .el-button {
   color: @themeColor;
